sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:3: error: not found: value getNombresValeurs
  var ecart:Int = getNombresValeurs()/2
                  ^