sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var ecart:Int = getNombresValeurs()/2
  while (ecart >0){
    var v = 0
    for (i<-1 to getNombreValeurs()-1){
      v=getValeur(i)
      var j=i
      while(j>0 && !plusPetitQue(j-ecart,v)){
          copie(j-ecart,j)
          j=j-ecart
      }
      setValeur(j,v)
    }
   ecart = ecart/2
 }
}